Fix controls alignment

--- a/app/assets/stylesheets/new_route.scss
+++ b/app/assets/stylesheets/new_route.scss
@@ -12,19 +12,22 @@
   }
 
   .route-builder-controls {
-    background-color: $map-nav-gray;
+    display: flex;
+    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
+    justify-content: space-between;
+    height: 50px;
+    align-items: center;
+    min-width: 250px;
     position: fixed;
+    left: 0;
     top: 50px;
     width: 100%;
-    height: 50px;
+    background-color: $map-nav-gray;
     z-index: 101;
-    padding: 0 3vw;
-    display: flex;
-    justify-content: space-around;
-    box-shadow: 0 2px 2px 1px rgba(0, 0, 0, 0.2);
-    align-items: center;
+
 
     .right-controls {
+      padding-right: 3vw;
       #no-directions-button {
         background-color: $lightercorporate;
         cursor: default;
@@ -145,6 +148,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding-left: 3vw;
       .route-search-form {
         display: flex;
         align-items: center;
